<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:text="MENU"
        android:textSize="30dp"
        android:textAlignment="center"
        android:drawableLeft="@drawable/ic_menu"
        android:textStyle="bold"
        android:layout_marginLeft="55dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/salads"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:text="@string/salads"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_salad"
        android:textSize="24dp"
        android:layout_margin="18dp"
        android:onClick="onClickSaladsBtn"
        />

    <Button
        android:id="@+id/hotDrinks"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:text="@string/hotDrinks"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_hot_drinks"
        android:textSize="24dp"
        android:layout_margin="18dp"
        android:onClick="onClickHotDrinksBtn"
        />

    <Button
        android:id="@+id/coldDrinks"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:text="@string/coldDrinks"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_cold_drinks"
        android:textSize="24dp"
        android:layout_margin="18dp"
        android:onClick="onClickColdDrinksBtn"
        />

    <Button
        android:id="@+id/mainMeals"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:text="@string/mainMeals"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="370dp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_meal"
        android:textSize="24dp"
        android:layout_margin="18dp"
        android:onClick="onClickMealBtn"
        />

    <Button
        android:id="@+id/desserts"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:text="@string/desserts"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_dessert"
        android:textSize="24dp"
        android:layout_margin="18dp"
        android:onClick="onClickDessertBtn"
        />

</androidx.appcompat.widget.LinearLayoutCompat>