<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_menu"
        android:paddingTop="20dp"
        android:text="MENU"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/salads"
        app:layout_constraintEnd_toEndOf="@+id/salads"
        app:layout_constraintStart_toStartOf="@+id/salads"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/salads"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_salad"
        android:onClick="onClicksaladsBtn"
        android:text="@string/salads"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/hotDrinks"
        app:layout_constraintEnd_toEndOf="@+id/hotDrinks"
        app:layout_constraintStart_toStartOf="@+id/hotDrinks"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
         />

    <Button
        android:id="@+id/hotDrinks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_hot_drinks"
        android:onClick="onClickHotDrinksBtn"
        android:text="@string/hotDrinks"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/coldDrinks"
        app:layout_constraintEnd_toEndOf="@+id/coldDrinks"
        app:layout_constraintStart_toStartOf="@+id/coldDrinks"
        app:layout_constraintTop_toBottomOf="@+id/salads"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/coldDrinks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_cold_drinks"
        android:onClick="onClickColdDrinksBtn"
        android:text="@string/coldDrinks"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/mainMeals"
        app:layout_constraintEnd_toEndOf="@+id/mainMeals"
        app:layout_constraintStart_toStartOf="@+id/mainMeals"
        app:layout_constraintTop_toBottomOf="@+id/hotDrinks"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mainMeals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_meal"
        android:onClick="onClickMealBtn"
        android:text="@string/mainMeals"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/desserts"
        app:layout_constraintEnd_toEndOf="@+id/desserts"
        app:layout_constraintStart_toStartOf="@+id/desserts"
        app:layout_constraintTop_toBottomOf="@+id/coldDrinks"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/desserts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_dessert"
        android:onClick="onClickDessertBtn"
        android:text="@string/desserts"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMeals"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desserts"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>